Farmer dashboard modified

--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -17,7 +17,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-10 marginComponent">
+      <div class="col-md-10 marginComponent" style="margin-top:-7rem">
         <div class="tab-content">
           <div class="tab-pane" id="add" role="tabpanel">
             <app-farmer-add-address></app-farmer-add-address>
