--- a/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
+++ b/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
@@ -69,10 +69,10 @@
 		</div>
 	</ng-template>
 	<ng-template #empty>
-		<div class="container">
+		<div class="container" style=" text-align: center;">
 			<div class="h6">Your Cart (0 Items)</div>
 		</div>
-		<div class="cart-header">
+		<div class="cart-header" style="margin-bottom: 8rem; text-align: center;">
 			<img src="./../../../../assets/images/empty_cart.jpg" alt="empty wishlist" class="img-fluid">
 		</div>
 	</ng-template>
