--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -28,6 +28,9 @@
         <li class="nav-item">
           <a class="nav-link ml-5" routerLink="/support">You are in <i class="fa fa-map-marker mr-1 ml-2"></i>{{city}}</a>
         </li>
+        <li><button (click)="switchLanguage('en')">en</button></li>
+
+         <li><button (click)="switchLanguage('hn')">hn</button></li>
       </ul>
        <ul *ngIf="loggedIn==false">
           <li class="nav-item">
