--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -40,7 +40,7 @@
         </ul>
       </div>
       <div class="col-sm-2">
-        <h5>Support</h5>
+        <h5> {{ 'support' | translate }}</h5>
         <ul>
           <li>
             <a routerLink="/help">Help</a>
