--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -29,7 +29,7 @@
 <!-- end of header for customer-->
 <div class="container-fluid my-4">
   <div class="row">
-    <div class="col-md-2" id="marLeft">
+    <div class="col-md-2" style="margin-left: .5rem">
       <!-- filtered by price start-->
 
       <label class="my-3">
