--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 <div class="services" id="services">
   <div class="container">
 
-    <h2 class="sub-title">Why Choose Us</h2>
+    <h2 class="sub-title">{{ 'homepage.why_choose_us' | translate }}</h2>
 
     <div class="banner-bottom-girds">
       <div class="row">
@@ -12,7 +12,7 @@
           <div class="white-shadow">
             <div class="row">
               <div class=" col-md-8 white-right">
-                <h4>Best Logistic</h4>
+                <h4>{{ 'homepage.best_logistic' | translate }}</h4>
                 <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
                 <div class="w3layouts_more-buttn ser-buttn">
                   <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
@@ -30,7 +30,7 @@
           <div class="white-shadow">
             <div class="row">
               <div class=" col-md-8 white-right">
-                <h4>Best Quality</h4>
+                <h4>{{ 'homepage.best_quality' | translate }}</h4>
                 <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
                 <div class="w3layouts_more-buttn ser-buttn">
                   <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
@@ -52,7 +52,7 @@
 
             <div class="row">
               <div class="col-md-8 white-right">
-                <h4>Best Products</h4>
+                <h4>{{ 'homepage.best_products' | translate }}</h4>
                 <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
                 <div class="w3layouts_more-buttn ser-buttn">
                   <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
@@ -70,7 +70,7 @@
           <div class="white-shadow">
             <div class="row">
               <div class=" col-md-8 white-right">
-                <h4>Best Seeds</h4>
+                <h4>{{ 'homepage.best_seeds' | translate }}</h4>
                 <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
                 <div class="w3layouts_more-buttn ser-buttn">
                   <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
@@ -96,10 +96,9 @@
       <div class="card shadow p-2 my-2">
         <img class="card-img-top" src="../../../assets/Body/card1.jpg" alt="Card image cap">
         <div class="card-body">
-          <h3 class="card-title">Our Aim</h3>
+          <h3 class="card-title">{{ 'homepage.our_aim' | translate }}</h3>
           <hr>
-          <p class="card-text">To connect rural farms with the nearby areas so that both the farmers and consumers get benefitted leading to their
-            mutual benefit.</p>
+          <p class="card-text">{{ 'homepage.our_aim_description' | translate }}</p>
         </div>
       </div>
     </div>
@@ -107,10 +106,9 @@
       <div class="card shadow p-2 my-2">
         <img class="card-img-top" src="../../../assets/Body/card2.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h3 class="card-title">Our Offering</h3>
+          <h3 class="card-title">{{ 'homepage.our_offering' | translate }}</h3>
           <hr>
-          <p class="card-text"> Best quality products straight from farm to consumer so that you never need to question freshness of food you.
-            are eating.</p>
+          <p class="card-text">{{ 'homepage.our_offering_description' | translate }}</p>
         </div>
       </div>
     </div>
@@ -118,10 +116,9 @@
       <div class="card shadow p-2 my-2">
         <img class="card-img-top" src="../../../assets/Body/card3.jpg" alt="Card image cap">
         <div class="card-body">
-          <h3 class="card-title">Our Prize</h3>
+          <h3 class="card-title">{{ 'homepage.our_prize' | translate }}</h3>
           <hr>
-          <p class="card-text">Nothing makes us more happy than seeing farmer of our country grow, pave a way to their economical development
-            leading to developing India.</p>
+          <p class="card-text">{{ 'homepage.our_prize_description' | translate }}</p>
         </div>
       </div>
     </div>
@@ -130,7 +127,7 @@
 
 
     <div class="col-md-8 col-center m-auto">
-      <h2>What our clients say</h2>
+      <h2>{{ 'homepage.wht_our_clients_say' | translate }}</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
