--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -9,10 +9,10 @@
              <img class="first-slide" src="../../../assets/Body/slide1.jpg" alt="First slide">
              <div class="container">
                <div class="carousel-caption">
-                 <h1>Kisan Ki Dukan</h1>
-                 <p id="carouselLine">It's not fresh if it's not from the farm.</p>
-                 <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">I'm a Farmer</a>
-                 <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">I'm a Customer</a></p>
+                 <h1>{{ 'body.kisan_ki_dukan' | translate }}</h1>
+                 <p id="carouselLine">{{ 'body.caption' | translate }}</p>
+                 <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">{{ 'body.i_am_farmer' | translate }}</a>
+                 <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">{{ 'body.i_am_customer' | translate }}</a></p>
                </div>
              </div>
            </div>
@@ -20,10 +20,10 @@
              <img class="second-slide" src="../../../assets/Body/slide2.jpg" alt="Second slide">
              <div class="container">
                <div class="carousel-caption">
-                 <h1>Kisan Ki Dukan</h1>
-                 <p id="carouselLine">It's not fresh if it's not from the farm.</p>
-                 <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">I'm a Farmer</a>
-                 <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">I'm a Customer</a></p>
+                 <h1>{{ 'body.kisan_ki_dukan' | translate }}</h1>
+                 <p id="carouselLine">{{ 'body.caption' | translate }}</p>
+                 <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">{{ 'body.i_am_farmer' | translate }}</a>
+                 <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">{{ 'body.i_am_customer' | translate }}</a></p>
                </div>
              </div>
            </div>
@@ -31,10 +31,10 @@
              <img class="third-slide" src="../../../assets/Body/slide3.png" alt="Third slide">
              <div class="container">
                <div class="carousel-caption">
-                 <h1>Kisan Ki Dukan </h1>
-                 <p id="carouselLine">It's not fresh if it's not from the farm.</p>
-                 <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">I'm a Farmer</a>
-                 <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">I'm a Customer</a></p>
+                 <h1>{{ 'body.kisan_ki_dukan' | translate }}</h1>
+                 <p id="carouselLine">{{ 'body.caption' | translate }}</p>
+                 <p><a class="btn btn-light" routerLink="/farmer/login" role="button" id="btn">{{ 'body.i_am_farmer' | translate }}</a>
+                 <a class="btn btn-light" routerLink="/customer/login" role="button" id="btn">{{ 'body.i_am_customer' | translate }}</a></p>
                </div>
              </div>
            </div>
