--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -13,9 +13,9 @@
             <div class="row">
               <div class=" col-md-8 white-right">
                 <h4>{{ 'homepage.best_logistic' | translate }}</h4>
-                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <p>{{ 'homepage.best_logistic_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -31,9 +31,9 @@
             <div class="row">
               <div class=" col-md-8 white-right">
                 <h4>{{ 'homepage.best_quality' | translate }}</h4>
-                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <p>{{ 'homepage.best_quality_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -53,9 +53,9 @@
             <div class="row">
               <div class="col-md-8 white-right">
                 <h4>{{ 'homepage.best_products' | translate }}</h4>
-                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <p>{{ 'homepage.best_products_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -71,9 +71,9 @@
             <div class="row">
               <div class=" col-md-8 white-right">
                 <h4>{{ 'homepage.best_seeds' | translate }}</h4>
-                <p>delectus reiciendis maiores alias consequatur aut.maiores alias consequatur aut.</p>
+                <p>{{ 'homepage.best_seeds_description' | translate }}</p>
                 <div class="w3layouts_more-buttn ser-buttn">
-                  <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                  <a href="#" data-toggle="modal" data-target="#myModal">{{ 'homepage.read_more' | translate }}</a>
                 </div>
 
               </div>
@@ -127,7 +127,7 @@
 
 
     <div class="col-md-8 col-center m-auto">
-      <h2>{{ 'homepage.wht_our_clients_say' | translate }}</h2>
+      <h2>{{ 'homepage.what_our_clients_say' | translate }}</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
