--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -29,7 +29,7 @@
 <!-- end of header for customer-->
 <div class="container-fluid my-4">
   <div class="row">
-    <div class="col-md-2" style="margin-left: .5rem">
+    <div class="col-md-2">
       <!-- filtered by price start-->
 
       <label class="my-3">
@@ -47,7 +47,6 @@
         (onFinish)="myOnFinishQuantity($event)">
       </ion-range-slider>
       <!-- filtered by Quantity end-->
-      <div class="vl"></div>
     </div>
     
     <!-- end of side bar-->
