--- a/src/app/shared/support/support.component.html
+++ b/src/app/shared/support/support.component.html
@@ -1,5 +1,5 @@
 <div class="mt-100">
-  <h1> SUPPORT </h1>
+  <h1> {{ 'support.support' | translate }} </h1>
 </div>
 <form [formGroup]="rForm" (ngSubmit)="submitIssue(rForm.value)">
 
@@ -8,50 +8,50 @@
 
       <div class="form-comp-top">
         <div class="name">
-          <label for="issueTitle">Issue Title</label>
+          <label for="issueTitle">{{ 'support.issue_title' | translate }}</label>
         </div>
-        <input type="text" class="form-control" id="issueTitle" placeholder="Enter Issue Heading" formControlName="issueTitle">
+        <input type="text" class="form-control" id="issueTitle" placeholder="{{ 'support.issue_title' | translate }}" formControlName="issueTitle">
         <div *ngIf="rForm.controls['issueTitle'].touched && rForm.controls['issueTitle'].invalid" class="alert">
           <div *ngIf="rForm.controls['issueTitle'].hasError('required')">
-            Title is required!
+              {{ 'support.title_is_required' | translate }}
           </div>
         </div>
       </div>
 
       <div class="form-comp">
         <div class="name">
-          <label for="issueDescription">Issue Description</label>
+          <label for="issueDescription">{{ 'support.issue_description' | translate }}</label>
         </div>
-        <input type="textarea" class="form-control" id="issueDescription" placeholder="Enter Issue Heading" formControlName="issueDescription">
+        <input type="textarea" class="form-control" id="issueDescription" placeholder="{{ 'support.issue_description' | translate }}" formControlName="issueDescription">
         <div *ngIf="rForm.controls['issueDescription'].touched && rForm.controls['issueDescription'].invalid" class="alert">
           <div *ngIf="rForm.controls['issueDescription'].hasError('required')">
-            Description is required!
+              {{ 'support.description_is_required' | translate }}
           </div>
         </div>
       </div>
 
       <div class="form-comp">
         <div class="name">
-          <label for="inputEmail">E-mail</label>
+          <label for="inputEmail">{{ 'support.email' | translate }}</label>
         </div>
-        <input type="text" class="form-control" id="inputEmail" placeholder="Enter Issue Heading" formControlName="inputEmail">
+        <input type="text" class="form-control" id="inputEmail" placeholder="{{ 'support.email' | translate }}" formControlName="inputEmail">
         <div *ngIf="rForm.controls['inputEmail'].touched && rForm.controls['inputEmail'].invalid" class="alert">
           <div *ngIf="rForm.controls['inputEmail'].hasError('required')">
-            Email is required!
+              {{ 'support.email_is_required' | translate }}
           </div>
         </div>
       </div>
 
       <div class="form-comp">
         <div class="name">
-          <label for="inputScreenshot">Screenshot</label>
+          <label for="inputScreenshot">{{ 'support.screenshot' | translate }}</label>
         </div>
         <input type="file" class="form-control" id="inputScreenshot">
       </div>
 
       <div class="form-comp-button">
 
-        <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">Submit Issue</button>
+        <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'support.submit_issue' | translate }}</button>
       </div>
     </div>
   </div>
