--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -11,53 +11,57 @@
 
       <ul class="nav nav-tabs mr-auto" id="myTab" role="tablist">
         <li class="nav-item" *ngIf="loggedIn==false">
-          <a class="nav-link active" id="home-tab" data-toggle="tab" routerLink="/home" role="tab" aria-controls="home" aria-selected="true"><i class="fa fa-home mr-1"></i>Home</a>
+          <a class="nav-link active" id="home-tab" data-toggle="tab" routerLink="/home" role="tab" aria-controls="home" aria-selected="true"><i class="fa fa-home mr-1"></i>{{ 'header.home' | translate }}</a>
         </li>
         <li class="nav-item" *ngIf="loggedIn==true && role=='Customer'">
-          <a class="nav-link active" id="home-tab" data-toggle="tab" routerLink="/customer/myAccount" role="tab" aria-controls="home" aria-selected="true"><i class="fa fa-home mr-1"></i>My Account</a>
+          <a class="nav-link active" id="home-tab" data-toggle="tab" routerLink="/customer/myAccount" role="tab" aria-controls="home" aria-selected="true"><i class="fa fa-home mr-1"></i>{{ 'header.my_account' | translate }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="profile-tab" data-toggle="tab" routerLink="/productList" role="tab" aria-controls="profile" aria-selected="false"><i class="fa fa-product-hunt mr-1"></i>Products</a>
+          <a class="nav-link" id="profile-tab" data-toggle="tab" routerLink="/productList" role="tab" aria-controls="profile" aria-selected="false"><i class="fa fa-product-hunt mr-1"></i>{{ 'header.products' | translate }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="messages-tab" data-toggle="tab" routerLink="/help" role="tab" aria-controls="messages" aria-selected="false"><i class="fa fa-info-circle mr-1"></i>Help</a>
+          <a class="nav-link" id="messages-tab" data-toggle="tab" routerLink="/help" role="tab" aria-controls="messages" aria-selected="false"><i class="fa fa-info-circle mr-1"></i>{{ 'header.help' | translate }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="settings-tab" data-toggle="tab" routerLink="/support" role="tab" aria-controls="settings" aria-selected="false"><i class="fa fa-envelope mr-1"></i>Support</a>
+          <a class="nav-link" id="settings-tab" data-toggle="tab" routerLink="/support" role="tab" aria-controls="settings" aria-selected="false"><i class="fa fa-envelope mr-1"></i>{{ 'header.support' | translate }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link ml-5" routerLink="/support">You are in <i class="fa fa-map-marker mr-1 ml-2"></i>{{city}}</a>
+          <a class="nav-link ml-5" routerLink="/support">{{ 'header.you_are_in' | translate }}<i class="fa fa-map-marker mr-1 ml-2"></i>{{city}}</a>
         </li>
         <li><button (click)="switchLanguage('en')">en</button></li>
 
          <li><button (click)="switchLanguage('hn')">hn</button></li>
+
+         <li><button (click)="switchLanguage('tm')">tm</button></li>
+
+         <li><button (click)="switchLanguage('tl')">tl</button></li>
       </ul>
        <ul *ngIf="loggedIn==false">
           <li class="nav-item">
             <div class="dropdown">
                 <button type="button" class="btn btn-success dropdown-toggle mt-3" data-toggle="dropdown">
-                  LogIn & SignUp
+                  {{ 'header.login_signup' | translate }}
                 </button>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" routerLink="/farmer/login">Login As Farmer</a>
-                  <a class="dropdown-item" routerLink="/customer/login">Login As Customer</a>
-                  <a class="dropdown-item" routerLink="/farmer/authenticationAndAuthorization">Sign Up As Farmer</a>
-                  <a class="dropdown-item" routerLink="/customer/register">Sign Up As Customer</a>
+                  <a class="dropdown-item" routerLink="/farmer/login">{{ 'header.login_as_farmer' | translate }}</a>
+                  <a class="dropdown-item" routerLink="/customer/login">{{ 'header.login_as_customer' | translate }}</a>
+                  <a class="dropdown-item" routerLink="/farmer/authenticationAndAuthorization">{{ 'header.sign_up_as_farmer' | translate }}</a>
+                  <a class="dropdown-item" routerLink="/customer/register">{{ 'header.sign_up_as_customer' | translate }}</a>
                 </div>
               </div>
           </li>
       </ul>
       <ul class="nav nav-tabs" id="myTab" role="tablist" *ngIf="loggedIn==true && role=='Farmer'">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" role="tab" (click)="changeOnClickOfLogOut()"><i class="fa fa-sign-out mr-1"></i>Log Out</a>
+          <a class="nav-link" routerLink="/home" role="tab" (click)="changeOnClickOfLogOut()"><i class="fa fa-sign-out mr-1"></i>{{ 'header.logout' | translate }}</a>
         </li>
       </ul>
       <ul class="nav nav-tabs" id="myTab" role="tablist" *ngIf="loggedIn==true && role=='Customer'">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/customer/myCart" role="tab" data-toggle="tab"><i class="fa fa-cart-arrow-down mr-1"></i>My Cart</a>
+          <a class="nav-link" routerLink="/customer/myCart" role="tab" data-toggle="tab"><i class="fa fa-cart-arrow-down mr-1"></i>{{ 'header.my_cart' | translate }}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()" role="tab" data-toggle="tab"> <i class="fa fa-sign-out mr-1"></i>LogOut</a>
+          <a class="nav-link" routerLink="/home" (click)="changeOnClickOfLogOut()" role="tab" data-toggle="tab"> <i class="fa fa-sign-out mr-1"></i>{{ 'header.logout' | translate }}</a>
         </li>
       </ul>
      </div>
