--- a/src/app/customer/component/customer-login/customer-login.component.html
+++ b/src/app/customer/component/customer-login/customer-login.component.html
@@ -1,5 +1,5 @@
     <div class="container mt-100">
-      <h1>{{ 'customerlogin.login_customer' | translate }}</h1>
+      <h1>{{ 'customer_login.login_customer' | translate }}</h1>
     </div>
 <div class="container-fluid">
   <div class="card shadow cardwidth">
@@ -7,40 +7,40 @@
       <form [formGroup]="rForm" (ngSubmit)="loginCustomer(rForm.value)">
         <div class="form-group">
             <div class = "form-comp-top">
-                <div class = "name"><label for="exampleInputEmail1">{{ 'customerlogin.mobile_number' | translate }}</label></div>
-          <input class="form-control" type="text" id="mobileNo" formControlName="mobileNo" placeholder="{{ 'customerlogin.mobile_number' | translate }}">
+                <div class = "name"><label for="exampleInputEmail1">{{ 'customer_login.mobile_number' | translate }}</label></div>
+          <input class="form-control" type="text" id="mobileNo" formControlName="mobileNo" placeholder="{{ 'customer_login.mobile_number' | translate }}">
           <div *ngIf="rForm.controls['mobileNo'].touched && rForm.controls['mobileNo'].invalid" class="alert">
             <div *ngIf="rForm.controls['mobileNo'].hasError('minlength')" >
-              {{ 'customerlogin.less_than_10_digits' | translate }}
+              {{ 'customer_login.less_than_10_digits' | translate }}
             </div>
             <div *ngIf="rForm.controls['mobileNo'].hasError('maxlength')">
-            {{ 'customerlogin.more_than_10_digits' | translate }}
+            {{ 'customer_login.more_than_10_digits' | translate }}
            </div>
            <div *ngIf="rForm.controls['mobileNo'].hasError('required')">
-             {{ 'customerlogin.mobile_number_is_required' | translate }}
+             {{ 'customer_login.mobile_number_is_required' | translate }}
            </div>
          </div>
          </div>
          <div class = "form-comp">
-            <div class = "name"> <label for="exampleInputPassword1">{{ 'customerlogin.password' | translate }}</label></div>
-         <input type="password" formControlName="password" class="form-control" id="exampleInputPassword1" placeholder="{{ 'customerlogin.password' | translate }}">
+            <div class = "name"> <label for="exampleInputPassword1">{{ 'customer_login.password' | translate }}</label></div>
+         <input type="password" formControlName="password" class="form-control" id="exampleInputPassword1" placeholder="{{ 'customer_login.password' | translate }}">
          <div *ngIf="rForm.controls['password'].touched && rForm.controls['password'].invalid" class="alert">
           <div *ngIf="rForm.controls['password'].hasError('maxlength')">
-          {{ 'customerlogin.more_than_12_digits' | translate }}
+          {{ 'customer_login.more_than_12_digits' | translate }}
          </div>
          <div *ngIf="rForm.controls['password'].hasError('required')">
-         {{ 'customerlogin.password_is_required' | translate }}
+         {{ 'customer_login.password_is_required' | translate }}
          </div>
          <div *ngIf="rForm.controls['password'].hasError('pattern')">
-          {{ 'customerlogin.password_invalid' | translate }}
+          {{ 'customer_login.password_invalid' | translate }}
         </div>
       </div>
     </div>
     </div>
-    <a routerLink="/customer/forgetPassword">{{ 'customerlogin.forgot_password' | translate }}</a>
+    <a routerLink="/customer/forgetPassword">{{ 'customer_login.forgot_password' | translate }}</a>
     <div class = "form-comp-button">
-    <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'customerlogin.login' | translate }}</button>
-    <button type="submit" class="btn btn-success" routerLink="/customer/register">{{ 'customerlogin.register' | translate }}</button>
+    <button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!rForm.valid">{{ 'customer_login.login' | translate }}</button>
+    <button type="submit" class="btn btn-success" routerLink="/customer/register">{{ 'customer_login.register' | translate }}</button>
     </div>
   </form>
 </div>
