--- a/src/app/shared/connect-us/connect-us.component.html
+++ b/src/app/shared/connect-us/connect-us.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-100">
   <div class="row">
       <div class="col-md-12">
-        <h1> Contact Us </h1>
+        <h1>{{ 'connect_us.contact_us' | translate }}</h1>
       </div>
   </div>
   <br>
@@ -12,11 +12,11 @@
 		<div class="col-md-6">
 			<div class="card shadow">
 				<h5 class="card-header">
-					Mail Us
+					Mail Us{{ 'connect_us.mail_us' | translate }}
 				</h5>
 				<div class="card-block">
 					<p class="card-text">
-						Kisaan Ki Dukaan<br>(KKD)<br>Publicis Sapient Pvt. Ltd.<br>Unitech Infospace<br>Sector 21 <br>Gurugram <br>India, 122017
+						{{ 'connect_us.kisan_ki_dukan' | translate }}<br>({{ 'connect_us.kkd' | translate }})<br>{{ 'connect_us.publicis' | translate }}<br>{{ 'connect_us.unitech_infospace' | translate }}<br>{{ 'connect_us.sector_21' | translate }}<br>{{ 'connect_us.gurugram' | translate }} <br>{{ 'connect_us.india' | translate }}
 					</p>
 				</div>
 
@@ -25,11 +25,11 @@
 		<div class="col-md-6">
 			<div class="card shadow">
 				<h5 class="card-header">
-					Registered Office Address
+					{{ 'connect_us.registered_office_address' | translate }}
 				</h5>
 				<div class="card-block">
 					<p class="card-text">
-                        Kisaan Ki Dukaan<br>(KKD)<br>Publicis Sapient Pvt. Ltd.<br>Unitech Infospace<br>Sector 21 <br>Gurugram <br>India, 122017
+                        {{ 'connect_us.kisan_ki_dukan' | translate }}<br>({{ 'connect_us.kkd' | translate }})<br>{{ 'connect_us.publicis' | translate }}<br>{{ 'connect_us.unitech_infospace' | translate }}<br>{{ 'connect_us.sector_21' | translate }}<br>{{ 'connect_us.gurugram' | translate }} <br>{{ 'connect_us.india' | translate }}
 					</p>
 				</div>
 
