--- a/src/app/shared/policies/policies.component.html
+++ b/src/app/shared/policies/policies.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-100">
         <div class="row">
             <div class="col-md-12">
-              <h1> Policies </h1>
+              <h1> {{ 'policy.policies' | translate }} </h1>
             </div>
         </div>
         <div class="container-fluid">
@@ -12,24 +12,7 @@
 
                             <div class="card-block">
                                     <p class="card-text">
-                                    Returns is a scheme provided by respective sellers directly under this policy in terms of
-                                    which the option of exchange, replacement and/ or refund is offered by the respective
-                                    sellers to you. All products listed under a particular category may not have the same
-                                    returns policy. For all products, the policy on the product page shall prevail over the
-                                    general returns policy. Do refer the respective item's applicable return policy on the
-                                    product page for any exceptions to the table below.
-
-                                    The return policy is divided into three parts; Do read all sections carefully to understand
-                                    the conditions and cases under which returns will be accepted.
-                                    A privacy policy is a legal document that details how a website gathers, stores, shares, and sells data about its visitors.
-                                    This data typically includes items such as a user’s name, address, birthday, marital status, medical history, and consumer
-                                    behavior. The specific contents of this document depend upon the laws in the legal jurisdiction in which your business
-                                    operates. Most countries have their own set of guidelines regarding what information is eligible for collection, and how
-                                    that information may be used.
-
-                                    When it comes to legal documents, it is best not to take chances. Fortunately, it’s easy to get a free website privacy
-                                    policy in just a few minutes. All you have to do is fill up the blank spaces below and we will send you an email with your
-                                    own personalized privacy policy for your business.
+                                    {{ 'policy.description' | translate }}
                                     </p>
                             </div>
                         </div>
