worked on home-page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -139,33 +139,27 @@
         <div class="carousel-inner">
           <div class="item carousel-item active">
             <div class="img-box">
-              <img src="../../../assets/Body/card3.jpg" alt="">
+              <img src="../../../assets/Body/PM_Modi_2015.jpg" alt="">
             </div>
-            <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris
-              magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum scelerisque non non purus. Suspendisse
-              varius nibh non aliquet.</p>
+            <p class="testimonial">We should not forget what was the state of grain production in the country after attaining independence. Our “annadata” has brought us out of the crisis. The country today has a record grain production, record dal, fruit, vegetables and milk production.</p>
             <p class="overview">
-              <b>Paula Wilson</b>, Media Analyst</p>
+              <b>Narendra Modi</b>, Prime Minister of India</p>
           </div>
           <div class="item carousel-item">
             <div class="img-box">
-              <img src="../../../assets/Body/card3.jpg" alt="">
+              <img src="../../../assets/Body/fresh.jpg" alt="">
             </div>
-            <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus
-              dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh,
-              facilisis gravida odio.</p>
+            <p class="testimonial">The diet, to be healthy, has to be mostly fruits, vegetables, beans, nuts and seeds.</p>
             <p class="overview">
-              <b>Antonio Moreno</b>, Web Developer</p>
+              <b>Joel Fuhrman</b>, American celebrity doctor</p>
           </div>
           <div class="item carousel-item">
             <div class="img-box">
-              <img src="../../../assets/Body/card3.jpg" alt="">
+              <img src="../../../assets/Body/us.jpg" alt="">
             </div>
-            <p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas.
-              Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla
-              massa. Etiam hendrerit dolor eget rutrum.</p>
+            <p class="testimonial">Cultivators of the Earth are the most virtuous and independent citizens.</p>
             <p class="overview">
-              <b>Michael Holz</b>, Seo Analyst</p>
+              <b>Thomas Jefferson</b>, 3rd President of the United States</p>
           </div>
         </div>
         <!-- Carousel controls -->
