--- a/src/app/farmer/component/forget-password/forget-password.component.html
+++ b/src/app/farmer/component/forget-password/forget-password.component.html
@@ -2,30 +2,30 @@
 <div class="mt-100">
 
 <div *ngIf="!hideVar">
-		<h1> Forget Password </h1>
+		<h1>{{ 'farmer_forgot_password.forget_password' | translate }}</h1>
 	<div class="container-fluid">
 		<div class="card shadow cardwidth">
 			<div class="card-body">
 				<form [formGroup]="numberForm" (ngSubmit)="sendOtp(numberForm.value)">
 					<div class="form-group">
 							<div class = "form-comp-top">
-						<label for="exampleInputEmail1">Mobile Number</label>
-						<input class="form-control" type="text" id="mobileNo" formControlName="mobileNo">
+						<label for="exampleInputEmail1">{{ 'farmer_forgot_password.mobile_number' | translate }}*</label>
+						<input class="form-control" type="text" id="mobileNo" formControlName="mobileNo" placeholder="{{ 'farmer_forgot_password.mobile_number' | translate }}">
 						<div *ngIf="numberForm.controls['mobileNo'].touched && numberForm.controls['mobileNo'].invalid" class="alert">
 							<div *ngIf="numberForm.controls['mobileNo'].hasError('minlength')" >
-								Less than 10 digits
+								{{ 'farmer_forgot_password.less_than_10_digits' | translate }}
 							</div>
 							<div *ngIf="numberForm.controls['mobileNo'].hasError('maxlength')">
-								More than 10 digits
+							{{ 'farmer_forgot_password.more_than_10_digits' | translate }}
 							</div>
 							<div *ngIf="numberForm.controls['mobileNo'].hasError('required')">
-								Mobile Number is required!
+								{{ 'farmer_forgot_password.mobile_number_is_required' | translate }}
 							</div>
 						</div>
 						</div>
 					</div>
 					<div class = "form-comp-button">
-					<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!numberForm.valid">Send OTP</button>
+					<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!numberForm.valid">{{ 'farmer_forgot_password.send_otp' | translate }}</button>
 				</div>
 				</form>
 			</div>
@@ -34,22 +34,22 @@
 </div>
 
 <div *ngIf="hideVar2">
-		<h1> Verify OTP To Reset Password </h1>
+		<h1>{{ 'farmer_forgot_password.verify_otp_to_reset_password' | translate }}</h1>
 	<div class="container-fluid">
 		<div class="card  shadow cardwidth">
 			<div class="card-body">
 				<form [formGroup]="otpForm" (ngSubmit)="verifyOtp(otpForm.value)">
 					<div class="form-group">
 							<div class = "form-comp-top">
-						<label for="exampleInputEmail1">Enter OTP</label>
+						<label for="exampleInputEmail1">{{ 'farmer_forgot_password.enter_otp' | translate }}*</label>
 						<input class="form-control" type="text" id="otp" formControlName="otp">
 						<div class="alert" *ngIf=" otpForm.controls['otp'].touched && otpForm.controls['otp'].hasError('required')">
-							OTP is required!
+							{{ 'farmer_forgot_password.otp_is_required' | translate }}
 						</div>
 						</div>
 					</div>
 					<div class = "form-comp-button">
-					<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!otpForm.valid">Verify OTP</button>
+					<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!otpForm.valid">{{ 'farmer_forgot_password.verify_otp' | translate }}</button>
 				</div>
 				</form>
 			</div>
@@ -59,41 +59,41 @@
 
 
 <div *ngIf="hideVar3">
-		<h1> Reset Password </h1>
+		<h1>{{ 'farmer_forgot_password.reset_password' | translate }}</h1>
 	<div class="container-fluid">
 		<div class="card shadow cardwidth">
 			<div class="card-body">
 				<form [formGroup]="newPasswordForm" (ngSubmit)="resetPasswordFarmer(newPasswordForm.value)">
 					<div class="form-group">
 							<div class = "form-comp-top">
-						<label for="exampleInputPassword1">New Password</label>
+						<label for="exampleInputPassword1">{{ 'farmer_forgot_password.new_password' | translate }}</label>
 						<input type="password" formControlName="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 						<div *ngIf="newPasswordForm.controls['password'].touched && newPasswordForm.controls['password'].invalid" class="alert">
 							<div *ngIf="newPasswordForm.controls['password'].hasError('minlength')" >
-								Less than 6 digits
+								{{ 'farmer_forgot_password.less_than_6_digits' | translate }}
 							</div>
 							<div *ngIf="newPasswordForm.controls['password'].hasError('maxlength')">
-								More than 12 digits
+							{{ 'farmer_forgot_password.more_than_12_digits' | translate }}
 							</div>
 							<div *ngIf="newPasswordForm.controls['password'].hasError('required')">
-								Password is required!
+							{{ 'farmer_forgot_password.password_is_required' | translate }}
 							</div>
 						</div>
 						</div>
 						<div class = "form-comp">
-						<label>Re-enter Password</label>
+						<label>{{ 'farmer_forgot_password.Re_enter_Password' | translate }}</label>
 						<input type="password" formControlName="confirmPassword" class="form-control" placeholder="Password">
 						<div *ngIf="newPasswordForm.controls['confirmPassword'].touched && newPasswordForm.controls['confirmPassword'].errors">
 							<div class="alert"  *ngIf="newPasswordForm.controls['confirmPassword'].hasError('required')">
-								Password is required!
+								{{ 'farmer_forgot_password.password_is_required' | translate }}
 							</div>
-							<div class="alert" *ngIf="newPasswordForm.controls['confirmPassword'].errors.notEquivalent">The new password and confirm password do not match
+							<div class="alert" *ngIf="newPasswordForm.controls['confirmPassword'].errors.notEquivalent">The new password and confirm password do not match{{ 'farmer_forgot_password.password_match' | translate }}
 							</div>
 						</div>
 					</div>
 					</div>
 					<div class = "form-comp-button">
-					<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!newPasswordForm.valid">Submit</button>
+					<button type="submit" class="btn btn-success" value="Submit Form" [disabled]="!newPasswordForm.valid">{{ 'farmer_forgot_password.submit' | translate }}</button>
 				</div>
 				</form>
 			</div>
