farmer add product translated

--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -4,16 +4,16 @@
       <div class="col-md-1 btn">
         <ul class="nav nav-tabs nav-justified sidebar-nav edit">
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#add" role="tab" aria-controls="add">Add Address</a>
+            <a class="nav-link" data-toggle="tab" href="#add" role="tab" aria-controls="add">{{ 'my_account.add_address' | translate }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#chPass" role="tab" aria-controls="chPass">Change Password</a>
+            <a class="nav-link" data-toggle="tab" href="#chPass" role="tab" aria-controls="chPass">{{ 'my_account.change_password' | translate }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#altMob" role="tab" aria-controls="altMob">Alternate Mobile</a>
+            <a class="nav-link" data-toggle="tab" href="#altMob" role="tab" aria-controls="altMob">{{ 'my_account.alternate_mobile' | translate }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#delPro" role="tab" aria-controls="delPro">Delete Profile</a>
+            <a class="nav-link" data-toggle="tab" href="#delPro" role="tab" aria-controls="delPro">{{ 'my_account.delete_profile' | translate }}</a>
           </li>
         </ul>
       </div>
