--- a/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-dashboard.component.html
@@ -2,22 +2,22 @@
   <div class="container-fluid">
     <ul class="nav nav-tabs nav-justified sidebar-nav edit" id="myTab" role="tablist">
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">My Account</a>
+        <a class="nav-link" data-toggle="tab" href="#acc" role="tab" aria-controls="acc">{{ 'farmer_dashboard.my_account' | translate }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " data-toggle="tab" href="#prod" role="tab" aria-controls="prod">Add Product</a>
+        <a class="nav-link " data-toggle="tab" href="#prod" role="tab" aria-controls="prod">{{ 'farmer_dashboard.add_product' | translate }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#bank" role="tab" aria-controls="bank">Bank Details</a>
+        <a class="nav-link" data-toggle="tab" href="#bank" role="tab" aria-controls="bank">{{ 'farmer_dashboard.bank_details' | translate }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#curr" role="tab" aria-controls="curr">Current Order</a>
+        <a class="nav-link" data-toggle="tab" href="#curr" role="tab" aria-controls="curr">{{ 'farmer_dashboard.current_order' | translate }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#prev" role="tab" aria-controls="prev">Previous Orders</a>
+        <a class="nav-link" data-toggle="tab" href="#prev" role="tab" aria-controls="prev">{{ 'farmer_dashboard.previous_orders' | translate }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#view" role="tab" aria-controls="view">View Product</a>
+        <a class="nav-link" data-toggle="tab" href="#view" role="tab" aria-controls="view">{{ 'farmer_dashboard.view_product' | translate }}</a>
       </li>
     </ul>
     <div class="tab-content">
