--- a/src/app/home-page/header/header.component.html
+++ b/src/app/home-page/header/header.component.html
@@ -35,6 +35,8 @@
          <li><button (click)="switchLanguage('tm')">tm</button></li>
 
          <li><button (click)="switchLanguage('tl')">tl</button></li>
+
+         <li><button (click)="switchLanguage('pn')">pn</button></li>
       </ul>
        <ul *ngIf="loggedIn==false">
           <li class="nav-item">
