--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -8,8 +8,8 @@
 
     <div class="banner-bottom-girds">
       <div class="row">
-        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
-          <div class="white-shadow">
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid d-flex align-items-stretch">
+          <div class="white-shadow col-md-12">
             <div class="row">
               <div class=" col-md-8 white-right">
                 <h4>{{ 'homepage.best_logistic' | translate }}</h4>
@@ -26,8 +26,8 @@
             <div class="clearfix"> </div>
           </div>
         </div>
-        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
-          <div class="white-shadow">
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid d-flex align-items-stretch">
+          <div class="white-shadow col-md-12">
             <div class="row">
               <div class=" col-md-8 white-right">
                 <h4>{{ 'homepage.best_quality' | translate }}</h4>
@@ -47,8 +47,8 @@
       </div>
       <div class="row">
 
-        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
-          <div class="white-shadow">
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid d-flex align-items-stretch">
+          <div class="white-shadow col-md-12">
 
             <div class="row">
               <div class="col-md-8 white-right">
@@ -66,8 +66,8 @@
             <div class="clearfix"> </div>
           </div>
         </div>
-        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid">
-          <div class="white-shadow">
+        <div class="col-md-6  col-sm-6 col-xs-6  its-banner-grid d-flex align-items-stretch">
+          <div class="white-shadow col-md-12">
             <div class="row">
               <div class=" col-md-8 white-right">
                 <h4>{{ 'homepage.best_seeds' | translate }}</h4>
