--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -4,12 +4,11 @@
 		<div class="_3qe6h">
 		</div>
 	</div>
-</div>
 <div class="row">
-	<div class="col-md-1">
+	<div class="col-sm-2">
 
 	</div>
-	<div id="card-306010" class="col-md-10">
+	<div id="card-306010" class="col-sm-8">
 		<div class="card my-2 shadow-sm">
 			<div class="card-header">
 				<a class="card-link" data-toggle="collapse" data-parent="#card-306010" href="#card-element-114778">{{ 'help.how_to_register' | translate }}</a>
@@ -53,7 +52,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-1">
+	<div class="col-sm-2">
 
 	</div>
+</div>
 </div>
